--- a/AzureDev0/Web.config
+++ b/AzureDev0/Web.config
@@ -15,7 +15,7 @@
     <add key="sender" value="RSMART" />
     <add key="SMSFeedId" value="379242" />
     <add key="SMSSentTime" value="200812110950" />
-    <add key="OneLoyalty" value="server=174.136.91.114;database=LincLoyalty;uid=CentuRYAdM;pwd=UnSQh739D6NCl3UshX;timeout=60" />
+    <add key="OneLoyalty" value="" />
     <add key="mailSmtpAddr" value="smtp.sendgrid.net" />
     <add key="EmailUsername" value="testing@in.arokiait.com" />
     <add key="EmailPassword" value="T3st1n@1209" />
