demo for devlopers

--- a/AzureDev0/AzureDev0.csproj
+++ b/AzureDev0/AzureDev0.csproj
@@ -89,6 +89,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Wcf\Wcf.csproj">
+      <Project>{1d4015f0-6362-41be-9611-da5d8e2207eb}</Project>
+      <Name>Wcf</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
