--- a/AzureDev0/Web.config
+++ b/AzureDev0/Web.config
@@ -5,10 +5,21 @@
   -->
 <configuration>
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
+    <compilation debug="true" targetFramework="4.7.2">
+      <buildProviders>
+        <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+      </buildProviders>
+      <assemblies>
+        <add assembly="Microsoft.ReportViewer.Common, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="Microsoft.ReportViewer.WebForms, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.7.2" />
+    <httpHandlers>
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" validate="false" />
+    </httpHandlers>
   </system.web>
-    <appSettings>
+  <appSettings>
     <add key="SecretKey" value="Si)kPoil" />
     <add key="Sms_User_name" value="7976825458" />
     <add key="Sms_Password" value="Rne@1234" />
@@ -30,21 +41,16 @@
     <add key="FromMail" value="noreply@fernhotels.com" />
     <add key="TestMail" value="prabhanjan@arokiait.com" />
     <add key="AlertMail_Ids" value="greencover01@gmail.com,md@panasiamarketing.com" />
-    <add key="OneLoyalty" value="server=174.136.91.114;database=SSC_KSA;uid=SSC_KSA1LusR;pwd=RUd7GW)Sh37DYcQr;timeout=60000"/>
+    <add key="OneLoyalty" value="server=174.136.91.114;database=SSC_KSA;uid=SSC_KSA1LusR;pwd=RUd7GW)Sh37DYcQr;timeout=60000" />
     <add key="aspnet:MaxHttpCollectionKeys" value="20000" />
     <add key="AddDays" value="0" />
     <add key="MinusDays" value="-31" />
     <add key="SapURL" value="-31" />
-
-    <add key="SecretKey" value="Si)kPoil"/>
+    <add key="SecretKey" value="Si)kPoil" />
     <add key="DefaultPagePass" value="Default.aspx" />
-
     <add key="Dashboard" value="~/BackendDashboard/CProClubDashBoard.aspx" />
-    <add key="CustomerDashboard"  value="~/Castrol/CustomerDetails/CustomerRedeemCatalogue.aspx" />
+    <add key="CustomerDashboard" value="~/Castrol/CustomerDetails/CustomerRedeemCatalogue.aspx" />
     <add key="Domain" value="ESSILOR_SG" />
-
-
-
     <add key="TRANSFER_API_PROFILE_ID" value="16120346" />
     <add key="API_TOKEN" value="Bearer 3ffb2248-3f7a-4515-8c57-4bcd28b02094" />
     <add key="QuoteURL" value="https://api.sandbox.transferwise.tech/v1/quotes" />
@@ -53,10 +59,6 @@
     <add key="FundTransferURL" value="https://api.sandbox.transferwise.tech/v3/profiles/{ProfileId}/transfers/{transferid}/payments" />
     <add key="TransferDeliveryURL" value="https://api.sandbox.transferwise.tech/v1/delivery-estimates/" />
     <add key="AccountRequirementsURL" value=" https://api.sandbox.transferwise.tech/v1/quotes/{quoteID}/account-requirements" />
- 
-   
-
-    
     <add key="PushSenderID" value="1012567609224" />
     <add key="PushWorkingKey" value="AIzaSyA3Fir68ufMxPzzCYr_UKqhYcKsmRzLOdw" />
     <add key="PushType" value="" />
@@ -64,12 +66,9 @@
     <add key="PushVibrate" value="true" />
     <add key="PushAlert" value="" />
     <add key="CerrificatePassword" value="12345678" />
-  
     <add key="MerchantUserName" value="MyIncentiveDemoMerchant" />
-
     <add key="sender" value="CZIMED" />
     <add key="workingkey" value="14901hqal6h787p1lnjo8" />
-    
     <add key="CustomerProfile" value="~/Profile/CustomerProfile.aspx" />
     <add key="DefaultPage" value="~/Default.aspx" />
     <add key="CommonXML" value="~/XML_FILES/CommonXmlMaster.xml" />
@@ -77,7 +76,7 @@
     <add key="MessageFileUpload" value="~/UploadFiles/MessageCenter/" />
     <add key="NoOfRows_Grid" value="10" />
     <add key="Sms_User_name" value="7000000044_abh" />
-        <add key="Sms_Password" value="tpgjd_abh" />
+    <add key="Sms_Password" value="tpgjd_abh" />
     <add key="PromotionImageUrl" value="http://essilor.oneloyalty.in/UploadFiles/PromotionImage/" />
     <add key="CatalogueImagesUrl" value="http://essilor.oneloyalty.in/UploadFiles/CatalogueImages/" />
     <add key="Sms_User_name" value="office@prettyclickcosmetics.com" />
@@ -90,33 +89,24 @@
     <add key="DefaultCustPage" value="~/Zeiss/index.aspx" />
     <add key="Merchantname" value="EssilorDemo" />
     <add key="DefaultCustPage" value="~/GPLP/GPLPCustRegistration.aspx" />
-   
-
     <!--<add key="SmsUrl" value="http://alerts.solutionsinfini.com/api/web2sms.php" />-->
     <!--<add key="SmsUrl" value="http://api.sparrowsms.com/v2/sms/" />-->
     <add key="BulkSmsUrl" value="http://alerts.sinfini.com/api/xmlapi.php" />
-  
     <add key="workingkey" value="Afe2ec0c877359e2c0899b38af63039b7" />
     <add key="sender" value="GJPHSE" />
     <add key="SmsUrl" value="https://mobile.emtel.com:15003/cgi-bin/sendsms" />
     <add key="BulkSmsUrl" value="http://alerts.sinfini.com/api/xmlapi.php" />
-  
     <!--<add key="SmsUrl" value="http://sms.ivisko.biz/api/v1/sms/single" />-->
     <add key="BulkSmsUrl" value="http://sms.ivisko.biz/api/v1/sms/bulk" />
- 
     <add key="workingkey" value="A1eff6f9884352098d066f7e98e672f97" />
- 
     <add key="workingkey" value="A0930a4e0b9f8cde4af78eabdddb566ef" />
     <add key="sender" value="HYCLUB" />
     <add key="workingkey" value="UNZQEV58J8ihpAt9opQi" />
     <add key="sender" value="Prettyclick" />
- 
     <add key="workingkey" value="48a10ed2-56b6-11e5-9934-f2ccdae6071b" />
     <add key="sender" value="HNDIET" />
-   
     <add key="workingkey" value="Aca197a1f8d79597af64dbbc49cca1dc2" />
     <add key="sender" value="FERNGC" />
- 
     <add key="workingkey" value="Aae6d8f3180f041832fecedfca0e852f6" />
     <add key="sender" value="DAMROL" />
     <add key="FileParameter" value="~/XMLFolders/XML_FILES/XmlLabels.xml" />
@@ -127,10 +117,11 @@
     <add key="APIkey" value="ROTR5KFSKQCKRU3MD6OB" />
     <add key="APISecret" value="2z2nd7lkyc0BaUMvrBCq1mb542a6MYWwp8lq9wmU" />
     <add key="YougotaGiftUrl" value="https://b2b-sandbox.yougotagift.com/corporate/api/v2-1/brands/?country=" />
-    <add key="PayUMerchantKey" value="aBK8TCOX"></add>
-    <add key="PayUMerchantSalt" value="4prkCxdtd7"></add>
+    <add key="PayUMerchantKey" value="aBK8TCOX">
+    </add>
+    <add key="PayUMerchantSalt" value="4prkCxdtd7">
+    </add>
     <add key="GoogleAPIKey" value="Test" />
-
     <add key="CampaignImageUrl" value="../UploadFiles/CampaignImages/" />
     <add key="CustomerCare" value="" />
     <add key="BasicUserName" value="Century@98$%76" />
@@ -144,9 +135,8 @@
     <!--<add key="SecretKey" value="$RD_r@p&amp;" />-->
     <!--<add key="WalletBalanceAPI" value="https://api.sandbox.transferwise.tech/v1/borderless-accounts"/>-->
     <add key="SureGiftUrl" value="https://business.suregifts.com.ng/api/business/GetJSONMerchants" />
-    
-    <add key="REQUESTED_URL" value="http://localhost:60904/RAdvantage/RsmLoginRequestuPDATED.aspx"></add>
-
+    <add key="REQUESTED_URL" value="http://localhost:60904/RAdvantage/RsmLoginRequestuPDATED.aspx">
+    </add>
     <add key="PAYTM_MID" value="Arokia61140244209726" />
     <add key="PaytmMerchantKey" value="gAD1fgaYD!K8CseB" />
     <add key="BankTrnaferCallBackUrl" value="https://centuryproclub.com/paytmcallbackurl.aspx" />
@@ -156,7 +146,6 @@
     <!--<add key="WalletBalanceAPI" value="https://staging-dashboard.paytm.com/bpay/api/v1/account/list" />-->
     <add key="WALLET_TRANSFER_API" value="https://staging-dashboard.paytm.com/bpay/api/v1/disburse/order/wallet/gratification" />
     <add key="BANK_TRANSFER_API" value="https://staging-dashboard.paytm.com/bpay/api/v1/disburse/order/bank" />
-
     <add key="oauthConsumerkey" value="148d05390c6b6b7339065c4e8726e949" />
     <add key="OauthConsumersecret" value="d07e929af027803a88c6f79bbc88193c" />
     <add key="OauthUsername" value="qa1inarokiait@woohoo.in" />
@@ -164,32 +153,23 @@
     <add key="QWICK_CILVER_ORDER_API" value="https://sandbox.woohoo.in/rest/spend" />
     <add key="QWICK_CILVER_RESEND_API" value="https://sandbox.woohoo.in/rest/resend" />
     <add key="QWICK_CILVER_STATUS_API" value="https://sandbox.woohoo.in/rest/status" />
-
     <add key="RequestTokenUrl" value="https://sandbox.woohoo.in/oauth/initiate" />
     <add key="UserAuthorizationUrl" value="https://sandbox.woohoo.in/oauth/authorize/customerVerifier" />
-
     <add key="AccessTokenUrl" value="https://sandbox.woohoo.in/oauth/token" />
     <add key="QuikcilverUrl" value="https://sandbox.woohoo.in/rest/category/121" />
-
-  
     <add key="Sms_User_name" value="GVLC" />
     <add key="Sms_Password" value="GVLC123" />
     <add key="xml_Fixed_ID" value="0" />
     <!--<add key="SmsUrl" value="http://cloud.smsindiahub.in/vendorsms/pushsms.aspx" />-->
     <add key="workingkey" value="GVLC123" />
     <add key="sender" value="GVCLUB" />
-
     <add key="PAYTM_MID" value="Arokia14341123320019" />
     <add key="PaytmMerchantKey" value="MEo%a5uuZNTcTHWz" />
     <add key="SUB_WALLET_GUID" value="8fcc3d84-d098-11e9-8708-fa163e429e83" />
-
     <add key="BankTrnaferCallBackUrl" value="https://centuryproclub.com/paytmcallbackurl.aspx" />
     <add key="WalletCallBackUrl" value="https://centuryproclub.com/paytmcallbackurl.aspx" />
-
     <add key="WOGIUrl" value="https://gateway.wogi.dev/api/v1/products" />
     <add key="WOGIUrlToken" value="https://gateway.wogi.dev/api/oauth/token" />
-
-
     <add key="WOGIUrl" value="https://gateway.wogi.gifts/api/v1/products" />
     <add key="TRANSFER_API_PROFILE_ID" value="19530961" />
     <!--<add key="API_TOKEN" value="Bearer 56bab43f-8b55-4b03-90f4-278180c81f78"/>
@@ -200,13 +180,20 @@
     <add key="TransferDeliveryURL" value="https://api.transferwise.com/v1/delivery-estimates/"/>
     <add key="AccountRequirementsURL" value=" https://api.transferwise.com/v1/quotes/{quoteID}/account-requirements"/>-->
     <add key="WalletBalanceAPI" value="https://api.transferwise.com/v1/borderless-accounts" />
-
-    <add key="AXISSecreteKey" value="3cb0d7fdb7cad5b30c8462f258b4b910"></add>
-    <add key="AXISvi" value="50175589ba07bf2e"></add>
-    <add key="AXIS_SSO_URL" value="https://adportalapiuat2access.go.akamai-access.com/axisdirect_login/app/index.php/sso/ValidateCustomer"></add>
-    <add key="AXIS_PATNER_KEY" value="U6EYJN7DSDMFDYRT"></add>
+    <add key="AXISSecreteKey" value="3cb0d7fdb7cad5b30c8462f258b4b910">
+    </add>
+    <add key="AXISvi" value="50175589ba07bf2e">
+    </add>
+    <add key="AXIS_SSO_URL" value="https://adportalapiuat2access.go.akamai-access.com/axisdirect_login/app/index.php/sso/ValidateCustomer">
+    </add>
+    <add key="AXIS_PATNER_KEY" value="U6EYJN7DSDMFDYRT">
+    </add>
   </appSettings>
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules runAllManagedModulesForAllRequests="true" />
+    <handlers>
+      <add name="ReportViewerWebControlHandler" verb="*" path="Reserved.ReportViewerWebControl.axd" preCondition="integratedMode" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+    </handlers>
+  </system.webServer>
 </configuration>
-
-
- 
